get api up and running correctly

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,5 +11,6 @@ RUN gem install bundler
 WORKDIR /srv/api
 
 ENV BUNDLE_PATH /var/lib/bundler
-ENV REDIS_URL redis://store:6379
-ENV APPLICATION_PORT 4000
+ENV REDIS_URL redis://redis:6379
+ENV APPLICATION_PORT 80
+EXPOSE $APPLICATION_PORT
