add dynamodb for fun

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
   redis:
     image: redis
 
+  dynamodb:
+    build: databases/dynamodb-local/
+
   postgres:
     build: databases/postgres
     volumes:
